# fastapi-learning

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.example  Dockerfile  LICENSE  Makefile  alembic.ini  backup.Dockerfile  bandit.yaml  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: CICD.yaml  azure-deploy.yaml  docker-build-push.yaml  docker-build-push.yml  main.yaml
.github/workflows/backup/: azure-deploy.yaml  docker-build-push.yaml
data/: test.db  test_db.db
graphana/: dashboard.yml
graphana/dashboards/: fastapi-dashboard-grafana.json
logs/: log.pos
migrations/: env.py
migrations/versions/: 3dd97f0b7bd6_initial_migration.py
monitoring/fluentd/: Dockerfile  fluent.conf
monitoring/graphana/: datasource.yml
monitoring/graphana/dashboards/: fastapi-dashboard-grafana.json
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
secrets/: startup.sh
src/: main.py  temp.py
src/api/v1/: api_router.py
src/api/v1/endpoints/: auth_endpoints.py  server_endpoints.py  user_endpoints.py
src/config/: config.py
src/database/: base.py  database.py  dependency.py
src/graphql/: context.py  router.py
src/graphql/schemas/: schema.py
src/graphql/schemas/resolvers/: mutation_resolver.py  query_resolver.py
src/graphql/schemas/types/: user_type.py
src/model/: user.py
src/schema/: user.py
src/security/auth/: dependency.py  jwt_handler.py
src/services/: user.py
src/utils/: config.py  helper.py  logger.py  prometheus_instrumentation.py  tracing.py
tests/: conftest.py
tests/e2e/: test_crud_flow.py
tests/integration/: test_user_endpoints.py
tests/unit/: test_jwt_handler.py  test_user_service.py
